# nixos-example

./: .gitignore  LICENSE  NOTES.md  README.md  configuration.nix  nixos.nix
service-a/: a.py  default.nix  module.nix
service-b/: module.nix  release.nix  service-b.cabal
service-b/src/: Main.hs
